--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,9 +17,7 @@
 }
 
 html {
-    scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
-    overflow-y: scroll;
     height: 100%;
 }
 
